--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npm install",
-
     "start": "node http_server.js"
   },
   "repository": {
@@ -23,11 +22,11 @@
     "@faker-js/faker": "^7.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "faker": "^5.1.0",
+    "faker": "^5.5.3",
+    "faker-js": "^1.0.0",
     "lowdb": "^1.0.0"
   },
-"engines": {
-  "node": "14.x"
+  "engines": {
+    "node": "14.x"
   }
-
 }
